online consultation intergration

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -25,6 +25,15 @@
 		</noscript>
 		<link rel="stylesheet" href="css/font-awesome.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<script>
+			$(document).ready(function () {
+				$('.ls-modal').on('click', function (e) {
+					e.preventDefault();
+					window.open($(this).attr('href'), "myWindow", "width=" + screen.availWidth + ",height=" + screen.availHeight+ ",location=0" );
+				});
+			});
+
+		</script>
 	</head>
 	<body id="top">
 
@@ -67,15 +76,14 @@
 								<ul class="actions">
 									<li><a href="<?php if(is_mobile()){ echo'tel:+919249561884';}else{ echo'#';} ?>" class="button">CALL +91 9249 56 1884</a></li>
 								</ul> 
-								<?php
-									if(is_mobile()){
-								?>
+
 								<ul class="actions">
-									<li><a href="http://wa.me/+919249561884" class="button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Online Colsulation</a></li>
+									<h3>
+										Online Consultation Time :  <p><strong>Sunday 10.00 AM - 12.00 PM</strong></p>
+									</h3>
+									<li><a href='http://localhost:8000/onlinebookings/chooseappointment/2' class="ls-modal button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Book Now</a></li>
 								</ul> 
-								<?php
-									}
-								?>
+
 
 							</article>
 							<article class="6u$ 12u$(xsmall) ">
@@ -89,18 +97,20 @@
 								<ul class="actions">
 									<li><a href="<?php if(is_mobile()){ echo'tel:+919061751768';}else{ echo'#';} ?>" class="button">CALL +91 9061 75 1768</a></li>
 								</ul>
-								<?php
-									if(is_mobile()){
-								?>
+
 								<ul class="actions">
-									<li><a href="http://wa.me/+919061751768" class="button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Online
-											Colsulation</a></li>
+									<h3>
+										Online Consultation Time : <p><strong>Saturday 10.00 AM - 12.00 PM</strong></p>
+									</h3>
+									<li><a href='http://localhost:8000/onlinebookings/chooseappointment/3' class="ls-modal button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Book Now</a></li>
 								</ul>
-								<?php
-									}
-								?>
+					
 
 							</article>
+
+							<iframe src="" frameborder="0">
+
+							</iframe>
 
 						</div>
 
@@ -255,6 +265,7 @@
 					<li>Copyright  &copy; 2014-2016 kolapillyayurveda.com. All rights reserved.</li>
 				</ul>
 			</footer>
+
 
 	</body>
 </html>
