--- a/layouts/home.html
+++ b/layouts/home.html
@@ -81,7 +81,7 @@
 									<h3>
 										Online Consultation Time :  <p><strong>Sunday 10.00 AM - 12.00 PM</strong></p>
 									</h3>
-									<li><a href='http://localhost:8000/onlinebookings/chooseappointment/2' class="ls-modal button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Book Now</a></li>
+									<li><a href='http://hca.kolapillyayurveda.com/onlinebookings/chooseappointment/2' class="ls-modal button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Book Now</a></li>
 								</ul> 
 
 
@@ -102,7 +102,7 @@
 									<h3>
 										Online Consultation Time : <p><strong>Saturday 10.00 AM - 12.00 PM</strong></p>
 									</h3>
-									<li><a href='http://localhost:8000/onlinebookings/chooseappointment/3' class="ls-modal button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Book Now</a></li>
+									<li><a href='http://hca.kolapillyayurveda.com/onlinebookings/chooseappointment/3' class="ls-modal button"><i class="fa fa-whatsapp" aria-hidden="true"></i> Book Now</a></li>
 								</ul>
 					
 
